--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "pagination"
-  , "version": "1.0.0"
+  , "version": "1.0.1"
   , "description": "Simple pagination"
   , "keywords": [ "requirejs", "plugin", "AMD loader", "pagination" ]
   , "maintainers": [
         {
             "name": "Dmitry Kuznetsov"
-          , "email": "dev.kuznetsov@gmail.com"
+          , "email": "kuznetsov2d@gmail.com"
         }
     ]
   , "homepage": "https://github.com/dmkuznetsov/requirejs-pagination"
